--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,59 @@
+html, body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+}
+
+.main {
+    position: relative;
+    height: 100%;
+    width: 100%;
+}
+
+.current {
+    position: absolute; 
+    left: 0; 
+    right: 0; 
+    margin-left: auto; 
+    margin-right: auto; 
+    width: 50%;
+}
+
+#date {
+    font-size: 40px;
+}
+
+.weather {
+    height: 300px;
+    width: 100%;
+    display: flex;
+    font-size: 200px;
+    align-items: center;
+}
+
 #weather-icon {
-    height: 50px;
-    width: 50px;
-    
+    height: 200px;
+    width: 200px;
+    background-repeat: no-repeat!important;
+    background-size: cover!important
+}
+
+#future {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 40%;
+    width: 40%;
+}
+
+.row {
+    width: 100%;
+    height: 50%;
+    display: flex;
+}
+
+.next-day {
+    border: 1px solid black;
+    width: 48%;
+    margin: 2%;
 }
